# Dashcam

./: .gitignore  CMAKE_PRESETS_GUIDE.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README  TODO  build.zig  vcpkg.json
cmake/: aarch64-pi-toolchain.cmake
docs/: CROSS-COMPILE.md
scripts/: build-cross.sh
src/: CMakeLists.txt  Camera.zig  Settings.h  Window.cpp  Window.h  dashcam.cpp  ff_test.cpp  main.cpp  main.zig
src/Camera/: CMakeLists.txt  Camera.cpp  Camera.h  Macros.h  Muxor.cpp  Muxor.h  Webcam.cpp  Webcam.h  WebcamUtils.cpp  WebcamUtils.h
vcpkg-overlay/triplets/: arm64-linux.cmake  x64-linux.cmake
vcpkg/triplets/: arm64-linux-custom.cmake
